fdo#50896 SfxItemSets can contain emtpy element

Use vector<shared_ptr> instead of ptr_vector.

Change-Id: I4e7d0735cbb036c608f697f7418109a2c497982f
Signed-off-by: Fridrich Štrba <fridrich.strba@bluewin.ch>